java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField8-hints.pass
Create Field data in org.netbeans.test.java.hints.CreateField8
